--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
-    "cookie-session": "^2.0.0-alpha.1"
+    "babel-preset-es2015": "^6.14.0"
   },
-   "dependencies": {
+  "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "cookie-session": "^2.0.0-alpha.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "morgan": "^1.7.0",
