--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "babel --copy-files src --out-dir dist",
     "build:watch": "npm run build -- --watch",
+    "start": "node dist/server.js",
     "start:dev": "nodemon dist/server.js"
   },
   "repository": {
