--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "babel --copy-files src --out-dir dist",
     "build:watch": "npm run build -- --watch",
     "start": "node dist/server.js",
-    "start:dev": "nodemon dist/server.js"
+    "start:dev": "nodemon dist/server.js",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
